--- a/styles/base.css
+++ b/styles/base.css
@@ -5,10 +5,12 @@ body {
 
 h1 {
 	text-align: center;
+    font-size: 34px;
 }
 
 h3 {
     text-align: center;
+    font-size: 22px;
 }
 
 input {
@@ -41,4 +43,16 @@ input {
 
 .hidden {
     display: none;
+}
+
+@media screen and (min-width: 426px) {
+    
+}
+
+@media screen and (min-width: 769px) {
+  
+}
+
+@media screen and (min-width: 1025px) {
+    
 }
