--- a/styles/base.css
+++ b/styles/base.css
@@ -5,12 +5,27 @@ body {
 
 h1 {
 	text-align: center;
-    font-size: 34px;
+    font-size: 55px;
 }
 
 h3 {
     text-align: center;
-    font-size: 22px;
+    font-size: 35px;
+}
+
+button {
+    font-size: 12px;
+    background-color: #B895FF;
+    padding: 5px;
+    border: 2px solid #000;
+    border-radius: 4px;
+    text-align: center;
+    margin-bottom: 20px;
+    display: block;
+    box-shadow: 2px 2px 4px 2px #412083;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
 }
 
 input {
