--- a/styles/base.css
+++ b/styles/base.css
@@ -23,10 +23,10 @@ img {
 }
 
 button {
-    font-size: 22px;
+    font-size: 24px;
     background-color: #000B22;
     padding: 10px;
-    border: 2px solid #FFEA9A;
+    border: 2px solid #24ABFF;
     border-radius: 4px;
     text-align: center;
     margin-bottom: 20px;
@@ -38,10 +38,10 @@ button {
 }
 
 #map {
-	margin: 0 auto;
+	margin: 50px auto;
 	width: 80vw;
 	height: 80vh;
-	box-shadow: 15px 15px 70px 15px black;
+	box-shadow: 0 0 40px #24ABFF;
 }
 
 #weather {
