--- a/styles/base.css
+++ b/styles/base.css
@@ -6,12 +6,12 @@ body {
 
 h1 {
 	text-align: center;
-    font-size: 60px;
+    font-size: 50px;
 }
 
 h3 {
     text-align: center;
-    font-size: 35px;
+    font-size: 30px;
 }
 
 img {
@@ -23,7 +23,7 @@ img {
 }
 
 button {
-    font-size: 24px;
+    font-size: 20px;
     background-color: #000B22;
     padding: 10px;
     border: 2px solid #24ABFF;
@@ -59,7 +59,45 @@ button {
 }
 
 @media screen and (min-width: 769px) {
-  
+  .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    img {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
+
+    h3 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+
+    #weerFlorida {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+
+    h1 {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+    }
+
+    #berekenRoute {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+    }
+
+    #verbergRoute {
+        grid-column: 2 / 3;
+        grid-row: 4 / 5;
+    }
+
+    #map {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+    }
 }
 
 @media screen and (min-width: 1025px) {
