--- a/styles/base.css
+++ b/styles/base.css
@@ -7,6 +7,7 @@ body {
 h1 {
 	text-align: center;
     font-size: 50px;
+    margin: 0px;
 }
 
 h3 {
@@ -38,7 +39,7 @@ button {
 }
 
 #map {
-	margin: 50px auto;
+	margin: 30px auto;
 	width: 80vw;
 	height: 80vh;
 	box-shadow: 0 0 40px #24ABFF;
@@ -54,14 +55,19 @@ button {
     display: none;
 }
 
+#route {
+    margin-bottom: 30px;
+    margin-top: 30px; 
+}
+
 @media screen and (min-width: 426px) {
     
 }
 
 @media screen and (min-width: 769px) {
-  .grid {
+    .grid {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr; 
     }
 
     img {
@@ -69,13 +75,8 @@ button {
         grid-row: 1 / 2;
     }
 
-    h3 {
+    #weer {
         grid-column: 1 / 2;
-        grid-row: 2 / 3;
-    }
-
-    #weerFlorida {
-        grid-column: 2 / 3;
         grid-row: 2 / 3;
     }
 
@@ -84,19 +85,14 @@ button {
         grid-row: 3 / 4;
     }
 
-    #berekenRoute {
-        grid-column: 1 / 2;
-        grid-row: 4 / 5;
-    }
-
-    #verbergRoute {
+    #route {
         grid-column: 2 / 3;
-        grid-row: 4 / 5;
+        grid-row: 2 / 3;
     }
 
     #map {
         grid-column: 1 / 3;
-        grid-row: 5 / 6;
+        grid-row: 4 / 5;
     }
 }
 
