--- a/styles/base.css
+++ b/styles/base.css
@@ -71,6 +71,7 @@ button {
     .grid {
         display: grid;
         grid-template-columns: 1fr 1fr; 
+        grid-gap: 10px;
     }
 
     img {
