--- a/styles/base.css
+++ b/styles/base.css
@@ -6,13 +6,13 @@ body {
 
 h1 {
 	text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     margin: 0px;
 }
 
 h3 {
     text-align: center;
-    font-size: 30px;
+    font-size: 22px;
 }
 
 img {
@@ -23,7 +23,7 @@ img {
 }
 
 button {
-    font-size: 20px;
+    font-size: 16px;
     background-color: #000B22;
     padding: 10px;
     border: 2px solid #24ABFF;
@@ -64,7 +64,18 @@ button {
 }
 
 @media screen and (min-width: 426px) {
-    
+    h1 {
+        font-size: 50px;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 25px;
+    }
+
+    button {
+        font-size: 18px;
+    }
 }
 
 @media screen and (min-width: 769px) {
@@ -101,5 +112,16 @@ button {
 }
 
 @media screen and (min-width: 1025px) {
-    
+    h1 {
+        font-size: 60px;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 35px;
+    }
+
+    button {
+        font-size: 20px;
+    }
 }
