--- a/styles/base.css
+++ b/styles/base.css
@@ -55,15 +55,14 @@ button {
 }
 
 #route {
-    margin-bottom: 10px;
-    margin-top: 30px; 
+    margin: 30px 5px 10px 5px;
 }
 
 #weer {
     margin-bottom: 10px;
 }
 
-@media screen and (min-width: 426px) {
+@media screen and (min-width: 426px){
     h1 {
         font-size: 50px;
     }
@@ -78,7 +77,7 @@ button {
     }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 769px){
     .grid {
         display: grid;
         grid-template-columns: 1fr 1fr; 
@@ -111,7 +110,7 @@ button {
     }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1025px){
     h1 {
         font-size: 60px;
     }
